@@ -1,7 +1,7 @@
 ########################################################################
 # Begin /etc/sysconfig/bootscripts
 #
-# Description : LCD Screen Control
+# Description : Bootscripts Config System
 #
 # Authors     :
 #
@@ -15,5 +15,10 @@
 # Enable	- INTERACTIVE=y
 # Disable 	- INTERACTIVE=
 INTERACTIVE=y
+
+# Enable/disable Logging of bootup
+# Enable	- LOGGING=y
+# Disable 	- LOGGING=
+LOGGING=y
 
 # End /etc/sysconfig/bootscripts
