@@ -1,7 +1,9 @@
-jim - September 2, 2006
-        * Add a check to see if the interface is already disabled
+jim - September 24, 2006
+        * Changed LFS to CLFS
+	* Added Logging Feature back to the bootscripts
 
 jim - September 2, 2006
+        * Add a check to see if the interface is already disabled
         * Add a check to see if the interface is already setup
 
 jim - August 27, 2006
